--- a/css/index.css
+++ b/css/index.css
@@ -82,11 +82,10 @@
   cursor: pointer;
 }
 .menu {
-  display: none;
   position: fixed;
   top: 75px;
   left: 0;
-  width: 350px;
+  width: 0px;
   height: 100vh;
   /* This give the height 100% of the screen or, '100% of View Height' */
   background-color: #81C784;
@@ -95,15 +94,20 @@
   border-bottom: none;
   z-index: 2;
   /* This set the layer level of the element, it has precendence over initial level of 1*/
+  transition: width 0.5s;
 }
 .menu ul li {
   list-style-type: none;
   font-size: 32px;
   padding: 30px 0;
   text-align: center;
+  display: none;
+}
+.menu--open ul li {
+  display: block;
 }
 .menu--open {
-  display: block;
+  width: 350px;
 }
 html,
 body {
